--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "express": "^4.14.0",
+    "mssql": "^3.3.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "webpack": "^1.13.1"
