--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "npm run test",
-    "dev": "./node_modules/.bin/webpack -d --watch"
+    "dev": "./node_modules/.bin/webpack -d --watch",
+		"lint": "./node_modules/.bin/eslint . --ext .jsx, .js || true"
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,6 @@
   "dependencies": {
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
-    "babel-plugin-transform-flow-strip-types": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "express": "^4.14.0",
