--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "eslint-plugin-import": "^1.11.1",
     "eslint-plugin-jsx-a11y": "^1.2.0",
     "eslint-plugin-react": "^5.2.2",
-    "json-loader": "^0.5.4"
+    "json-loader": "^0.5.4",
+    "stylelint": "^7.0.3",
+    "stylelint-config-standard": "^11.0.0"
   }
 }
