--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "eslint-plugin-jsx-a11y": "^1.2.0",
     "eslint-plugin-react": "^5.2.2",
     "json-loader": "^0.5.4",
+    "react-hot-loader": "^1.3.0",
     "stylelint": "^7.0.3",
-    "stylelint-config-standard": "^11.0.0"
+    "stylelint-config-standard": "^11.0.0",
+    "webpack-dev-server": "^1.14.1"
   }
 }
