--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "npm run test",
-    "dev": "./node_modules/.bin/webpack -d --watch",
+    "dev": "./node_modules/.bin/webpack -d",
     "lint": "./node_modules/.bin/eslint . --ext .jsx, .js || true"
   },
   "repository": {
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^6.1.2",
+    "cors": "^2.7.1",
     "eslint": "^2.9.0",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.11.1",
