--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,10 @@ install:
   - npm install eslint
   - npm install stylelint
 script:
-  - ./node_modules/.bin/synk test
+  - ./node_modules/.bin/snyk test
   - ./node_modules/.bin/nsp check
   - npm run lint
-  - ./node_modules/.bin/stylelint ./*/*.css ./*/*/*.css -f verbose
+  - ./node_modules/.bin/stylelint ./app/public/stylesheets/*.css -f verbose
 cache:
   directories:
     node_modules
